--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,9 @@
 .container {
   margin-top: 30px;
 }
+
+.btn-secondary {
+  background-color: #efefef;
+  border: 1px solid #cecece;
+  color: black;
+}
