--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,19 +3,21 @@
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form>
         <div id="user-data">
-          <div class="form-group">
+          <div class="form-group mb-2">
             <label for="username">Username</label>
-            <input type="text" id="username" class="form-control">
+            <input type="text" id="username" class="form-control" />
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
-          <div class="form-group">
+          <button class="btn btn-secondary mb-3" type="button">
+            Suggest an Username
+          </button>
+          <div class="form-group mb-3">
             <label for="email">Mail</label>
-            <input type="email" id="email" class="form-control">
+            <input type="email" id="email" class="form-control" />
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group mb-5">
           <label for="secret">Secret Questions</label>
-          <select id="secret" class="form-control">
+          <select id="secret" class="form-select">
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
           </select>
